# riffle_spikes

./: CLAUDE.md  CONTEXT.md  LICENSE  Makefile  README.md  go.mod  go.sum
bgeembed/: doc.go  embedder.go  embedder_legacy_darwin_amd64.go  embedder_modern.go  pooling.go  tokenizer.go  tokenizer_test.go
docs/: decision-criteria.md
docs/specs/: 2026-07-21-embed-onnxruntime-design.md  2026-07-21-self-contained-onnx-embedder-design.md
docs/superpowers/specs/: 2026-07-20-fetch-bge-model-design.md
embeddedonnx/: api_version_test.go  download.go  download_test.go  extract.go  extract_test.go  manifest.go  manifest_test.go  path.go  tarextract.go  tarextract_test.go
golden_eval/: corpus.go  corpus_test.go  embedder.go  scorer.go  scorer_test.go
golden_eval/adapters/onnxadapter/: adapter.go
golden_eval/adapters/puregoadapter/: adapter.go
golden_eval/adapters/sidecaradapter/: adapter.go  adapter_test.go
golden_eval/cmd/goldeneval/: embedder_select.go  golden_eval_run.go  main.go  stub_embedder.go
golden_eval/corpus/: expected.yaml  queries.yaml
handoffs/: INDEX.md  embedding-inference-prd.md
internal/ortlegacy/: doc.go  legacy_code.go  onnxruntime_go.go  setup_env.go  setup_env_windows.go  tensor_type_constraints.go
internal/stubembedder/: stubembedder.go
spike2_measure/: corpus.go  corpus_test.go  runner.go  runner_test.go  stats.go  stats_test.go
spike3_candle_sidecar/: Cargo.toml
spike3_candle_sidecar/src/: main.rs  model.rs  protocol.rs
spike3_rust_sidecar/: Cargo.toml
spike3_rust_sidecar/src/: main.rs  model.rs
(+7 files in other folders)
