[package]
name = "spike3_candle_sidecar"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = "0.11.0"
candle-nn = "0.11.0"
candle-transformers = "0.11.0"
clap = { version = "4.6.2", features = ["derive"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
tokenizers = "0.23.1"
