[package]
name = "spike3_candle_sidecar"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { version = "0.11.0", features = ["metal"] }
candle-nn = { version = "0.11.0", features = ["metal"] }
candle-transformers = { version = "0.11.0", features = ["metal"] }
clap = { version = "4.6.2", features = ["derive"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
tokenizers = "0.23.1"
